Adding buildscript outside of the jekyll plugins folder

--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ plugins: [jekyll-paginate]
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
-# exclude:
-#   - Gemfile
+exclude: [ build.sh, build.rb ]
+  # - Gemfile
 #   - Gemfile.lock
 #   - node_modules
 #   - vendor/bundle/
